# 2DGameStarter

./: .gitignore  LICENSE  LICENSE-3RD-PARTY.txt  README.md
app/: build.gradle
app/assets/conf/: debugShader.vert  game.atlas  shader.frag  shader.vert
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  main.cpp
app/src/main/cpp/Desktop/: CMakeLists.txt
app/src/main/cpp/Google/gpg-cpp-sdk/android/: README.md
app/src/main/cpp/conf/: debugShader.frag  debugShader.vert  shader.frag  shader.vert  textShader.frag  textShader.vert
app/src/main/cpp/include/: Animation.h  Button.h  Definitions.h  Drawable.h  Entity.h  Font.h  GGEGame.h  GameModel.h  GameScreen.h  GameView.h  Graphics.h  GraphicsUtils.h  InputSystem.h  Model.h  OS_ANDROID.h  OS_GLFW.h  OS_iOS.h  Resources.h  Screen.h  Shader.h  Sprite.h  Text.h  TextureAtlas.h  UIObject.h  View.h
app/src/main/cpp/libsLinux/: libogg.so.0.8.1  libopenal.so.1.15.1  libzip.so.2.1.0
app/src/main/cpp/libsOSX/: libogg.dylib  libvorbis.dylib  libvorbisfile.dylib  libzip.3.0.dylib
app/src/main/cpp/libsWin/debug/: LibVorbis.lib  OpenAL32.lib  glfw3.lib  libZip.lib  libogg-0.lib  zlib1.lib
app/src/main/cpp/source/: Animation.cpp  Button.cpp  Drawable.cpp  Font.cpp  GGEGame.cpp  GameModel.cpp  GameScreen.cpp  GameView.cpp  Graphics.cpp  GraphicsUtils.cpp  InputSystem.cpp  OS_GLFW.cpp  Resources.cpp  Sprite.cpp  Text.cpp  TextureAtlas.cpp  UIObject.cpp
app/src/main/cpp/source/android/: OS_ANDROID.cpp
app/src/main/cpp/source/iOS/: OS_iOS.cpp
app/src/main/java/com/gds/starter/: StarterActivity.java
app/src/main/res/values/: styles.xml
desktop/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
iOS/Starter/Starter.xcodeproj/: project.pbxproj
iOS/Starter/Starter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/Starter/Starter.xcodeproj/project.xcworkspace/xcuserdata/nardelli.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Starter/Starter.xcodeproj/xcuserdata/nardelli.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/Starter/Starter.xcodeproj/xcuserdata/nardelli.xcuserdatad/xcschemes/: Stater.xcscheme  xcschememanagement.plist
iOS/Starter/Stater/: AppDelegate.h  AppDelegate.m  Main.storyboard  ViewController.h  ViewController.mm  main.m
iOS/assets/: debugShader.frag  debugShader.vert  pressStart2P.fnt  shader.frag  shader.vert  textShader.frag  textShader.vert
